force-app/main/default/objects/Journal_Entry__b/Journal_Entry__b.object-meta.xml
<CustomObject>
    <indexes>
        <fullName>Base_Index</fullName>
        <fields>
            <name>Subscription__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>SFID__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Base Index</label>
    </indexes>
    <label>Journal Entry</label>
    <pluralLabel>Journal Entries</pluralLabel>
</CustomObject>