force-app/main/default/objects/Journal_Entry__b/fields/Balance__c.field-meta.xml
<CustomField>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>