force-app/main/default/objects/Journal_Entry__b/fields/Code__c.field-meta.xml
<CustomField>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>