force-app/main/default/objects/Journal_Entry__b/fields/Created_By_User__c.field-meta.xml
<CustomField>
        <fullName>Created_By_User__c</fullName>
        <label>Created By User</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>