force-app/main/default/objects/Journal_Entry__b/fields/Credit__c.field-meta.xml
<CustomField>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>