force-app/main/default/objects/Journal_Entry__b/fields/Debit__c.field-meta.xml
<CustomField>
        <fullName>Debit__c</fullName>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>