force-app/main/default/objects/Journal_Entry__b/fields/Delivery_Address__c.field-meta.xml
<CustomField>
        <fullName>Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>