force-app/main/default/objects/Journal_Entry__b/fields/DSI_Trans_Num__c.field-meta.xml
<CustomField>
        <fullName>DSI_Trans_Num__c</fullName>
        <label>DSI Trans Num</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>