force-app/main/default/objects/Journal_Entry__b/fields/Effective_Date__c.field-meta.xml
<CustomField>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </CustomField>