force-app/main/default/objects/Journal_Entry__b/fields/Entry_Type__c.field-meta.xml
<CustomField>
        <fullName>Entry_Type__c</fullName>
        <label>Entry Type</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>