force-app/main/default/objects/Journal_Entry__b/fields/Last_Updated_in_Salesforce__c.field-meta.xml
<CustomField>
        <fullName>Last_Updated_in_Salesforce__c</fullName>
        <label>Last Updated in Salesforce</label>
        <type>DateTime</type>
    </CustomField>