force-app/main/default/objects/Journal_Entry__b/fields/NIE_Applied__c.field-meta.xml
<CustomField>
        <fullName>NIE_Applied__c</fullName>
        <label>NIE Applied</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>