force-app/main/default/objects/Journal_Entry__b/fields/Route__c.field-meta.xml
<CustomField>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>